# Swarm

./: .gitignore  CMakeLists.txt  README.md  swarm_config.jsonl  swarm_heartbeat.txt
ahk/: swarm_control.ahk  swarm_pipe_example.ahk
src/: main.cpp  test_client.cpp  watchdog.cpp
