cmake_minimum_required(VERSION 3.20)
project(SwarmOverlay LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(SwarmOverlay src/main.cpp)
if (WIN32)
    add_definitions(-DUNICODE -D_UNICODE)
endif()
if (MSVC)
    target_compile_options(SwarmOverlay PRIVATE /W4 /permissive-)
else()
    target_compile_options(SwarmOverlay PRIVATE -Wall -Wextra -pedantic)
endif()
