cmake_minimum_required(VERSION 3.20)
project(SwarmOverlay LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(SwarmOverlay src/main.cpp)
if (WIN32)
    add_definitions(-DUNICODE -D_UNICODE)
endif()

# MinGW: link standard libraries statically to avoid missing runtime DLLs when launching outside MSYS2
if (MINGW)
    target_link_options(SwarmOverlay PRIVATE -static-libstdc++ -static-libgcc)
endif()
if (MSVC)
    target_compile_options(SwarmOverlay PRIVATE /W4 /permissive-)
else()
    target_compile_options(SwarmOverlay PRIVATE -Wall -Wextra -pedantic)
endif()

# Simple pipe test client (manual functional smoke test)
add_executable(SwarmPipeTest src/test_client.cpp)
if (MSVC)
    target_compile_options(SwarmPipeTest PRIVATE /W4 /permissive-)
else()
    target_compile_options(SwarmPipeTest PRIVATE -Wall -Wextra -pedantic)
endif()
